# tomboy

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  cmake-format.py
src/: cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp  register.hpp  types.hpp
